--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "d3-fetch": "^1.1.2",
     "d3-scale": "^3.0.1",
     "d3-selection": "^1.4.0",
+    "d3-shape": "^1.3.5",
     "parcel-bundler": "^1.12.3",
     "roughjs": "^3.1.0"
   }
